# cleanvibe

./: !dev-install.bat  .gitignore  CLAUDE.md  Cleanvibe Python Library.txt  LICENSE  README.md  chat.md  claude.md  devlog.md  migrate_repos_to_skills.py  new-repo.bat  pyproject.toml  queue.md  todo.md
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  publish.yml
cleanvibe/: __init__.py  arxiv.py  clawrxiv.py  cli.py  original.py  replicate.py  research.py  scaffold.py  skills.py  templates.py
docs/replication-examples/: download_all.py  papers.json
docs/replication-examples/an-image-is-worth-16x16-words-transformers-for/: README.md  download_paper.py
docs/replication-examples/attention-is-all-you-need/: .gitignore  README.md  SKILL.md  download_paper.py
docs/replication-examples/deep-residual-learning-for-image-recognition/: SKILL.md  paper.json
docs/replication-examples/generative-adversarial-networks/: SKILL.md
docs/replication-examples/grokking-worked-example/: .gitignore  CLAUDE.md  FINDINGS.md  README.md  SKILL.md  download_paper.py  paper.json  queue.md
docs/replication-examples/language-models-are-few-shot-learners/: paper.json
docs/replication-examples/lora-low-rank-adaptation-of-large-language-models/: SKILL.md  paper.json
docs/superpowers/plans/: 2026-05-30-cleanvibe-skill-distribution.md
docs/superpowers/specs/: 2026-05-30-cleanvibe-skill-distribution-design.md
pages/: CNAME  index.html  updates.md
replication_skill/: README.md
replication_skill/.github/workflows/: ci.yml
replication_skill/replications/an-image-is-worth-16x16-words-transformers-for/: SKILL.md  paper.json
replication_skill/replications/deep-residual-learning-for-image-recognition/: README.md  (+1 more)
replications/attention-is-all-you-need/: paper.json
replications/bert-pre-training-of-deep-bidirectional-transformers-for/: SKILL.md  download_paper.py
replications/generative-adversarial-networks/: README.md  download_paper.py
replications/language-models-are-few-shot-learners/: README.md
replications/lora-low-rank-adaptation-of-large-language-models/: download_paper.py
site/: index.html  style.css  tabs.js
src/replication_skill/: __init__.py  arxiv.py  cli.py  scaffold.py
tests/: test_arxiv.py  test_clawrxiv.py  test_cli_new_prompt.py  test_clone.py  test_migrate.py  test_original.py  test_replicate.py  test_research.py  test_scaffold.py  test_skills.py
(+12 files in other folders)
