[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanvibe"
version = "0.1.3"
description = "A workflow accelerator that scaffolds AI-assisted coding projects with opinionated documentation and launches Claude Code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Immanuelle" },
]
keywords = ["claude", "ai", "scaffold", "workflow", "vibe-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.scripts]
cleanvibe = "cleanvibe.cli:main"

[project.urls]
Homepage = "https://github.com/Immanuelle/cleanvibe"
Issues = "https://github.com/Immanuelle/cleanvibe/issues"
