[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replication-skill"
version = "0.1.0"
description = "Scaffold an arXiv paper into an agent-executable replication repo"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Emma Leonhart", email = "immanuelleleonhart@gmail.com" }]
requires-python = ">=3.9"
keywords = ["arxiv", "replication", "research", "reproducibility", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
replicate = "replication_skill.cli:main"

[project.urls]
Homepage = "https://github.com/EmmaLeonhart/replication_skill"
Source = "https://github.com/EmmaLeonhart/replication_skill"

[tool.hatch.build.targets.wheel]
packages = ["src/replication_skill"]

[tool.hatch.build.targets.wheel.shared-data]
"src/replication_skill/templates" = "replication_skill/templates"
